--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
+[dev-dependencies]
+criterion = {version = "0.4.0" , features = ["html_reports"]}
+
+[[bench]]
+name = "insert_benchmark"
+harness = false
