--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ criterion = {version = "0.4.0" , features = ["html_reports"]}
 [[bench]]
 name = "insert_benchmark"
 harness = false
+
+[[bench]]
+name = "in_circle_benchmark"
+harness = false
