--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,11 @@ name = "insert_quad_tree_benchmark"
 harness = false
 
 [[bench]]
-name = "in_circle_benchmark"
+name = "in_circle_spatial_hash_benchmark"
+harness = false
+
+[[bench]]
+name = "in_circle_quad_tree_benchmark"
 harness = false
 
 [dependencies]
