--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,16 @@
 [package]
 name = "spatial-neighbors"
 version = "0.1.0"
+authors = ["ToBinio"]
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+description = "Simple to use implementation of certain Spatial-Partitioning Algorithms | DataStructures"
+license = "MIT"
+repository = "https://github.com/ToBinio/spatial-neighbors"
+keywords = ["data-structures", "grid", "spatial", "quad-tree", "algorithms"]
+categories = ["algorithms","data-structures"]
 
 [dev-dependencies]
-criterion = {version = "0.4.0" , features = ["html_reports"]}
+criterion = { version = "0.4.0", features = ["html_reports"] }
 
 [[bench]]
 name = "insert_spatial_hash_benchmark"
