--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,10 @@ license = "MIT"
 repository = "https://github.com/ToBinio/spatial-neighbors"
 keywords = ["data-structures", "grid", "spatial", "quad-tree", "algorithms"]
 categories = ["algorithms","data-structures"]
+exclude = [
+    "/.idea",
+    "spatial-partition.iml"
+]
 
 [dev-dependencies]
 criterion = { version = "0.4.0", features = ["html_reports"] }
