--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ exclude = [
 
 [dev-dependencies]
 criterion = { version = "0.4.0", features = ["html_reports"] }
+colored = "2.0.0"
 
 [[bench]]
 name = "insert_grid_benchmark"
